css/styles.css
/*
    Andrew J. Tieszen
    styles.css
    27 October 2024
*/

/* CSS Reset */
body, header, nav, main, footer, h1, img, ul {
    margin: 0;
    padding: 0;
    border: 0;
}

/* Style Rules for mobile */
body {
    background-color: #357;
}

img {
    max-width: 60%;
    display: block;
    border: 2px solid;
    border-radius: 10px;
    margin: auto;
}

@media (prefers-color-scheme: light) { /* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-color-scheme */
    html {
        border-color: black;
    }
}
@media (prefers-color-scheme: dark) {
    html {
        border-color: white;
    }
}

a {
    display: inline-block;
}

.desktop {
    display: none;
}

.mobile {
    display: block;
}

/* Mobile style rules for header */
header {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    color: #fff;
    background-color: #357;
    text-align: center;
    font-family: "Roboto", sans-serif;
}

header h1 {
    font-size: 2.5em;
    margin: 1em 0 1em 0;
}

/* Mobile style rules for nav */
nav ul {
    list-style-type: none;
    margin: auto;
}

nav ul li {
    display: block;
    font-size: 1.2em;
    font-family: "Roboto", sans-serif;
    border-bottom: 1px solid #fff;
}

nav ul li:first-child {
    border-top: 1px solid #fff;
}

nav ul li a {
    display: block;
    color: #fff;
    text-align: center;
    padding: 0.5em 0.5em;
    text-decoration: none;
}

nav ul li a:hover {
    color: aqua;
}

nav ul li a.active {
    color: aqua;
    background: #68B;
}

/* Mobile style rules for main content */
main {
    font-size: 1.2em;
    padding: 2%;
    font-family: "Tinos", serif;
}
main a {
    text-decoration: none;
}

/* Mobile color rules for main content */
@media (prefers-color-scheme: light) {
    main {
        background-color: #fff;
    }

    main a {
        color: #357;
    }
    main a:hover {
        color: #68B;
    }
}
@media (prefers-color-scheme: dark) {
    main {
        background-color: #223;
        color: #fff;
    }

    main a {
        color: #68B;
    }
    main a:hover {
        color: #357;
    }
}

.email-link {
    font-size: 1.3em;
    display: block;
    text-align: center;
}

/* Mobile style rules for contact page */

.map {
    border: 2px solid;
    border-radius: 10px;
    width: 90%;
    aspect-ratio: 16/9; /* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/aspect-ratio */
}
@media (prefers-color-scheme: dark) {
    .map {
        border-color: aqua;
    }
}

#contact {
    text-align: center;
}

#contact ul {
    list-style-type: none;
}

#college {
    text-align: center;
}

/* Mobile style rules for footer */
footer {
    text-align: center;
    color: #fff;
    position: sticky;
    position: -webkit-sticky;
}

footer a {
    color: #fff;
    text-decoration: none;
}

/* Style rules for tablets */
@media screen and (min-width: 500px) {
    img {
        max-width: 100%;
    }

    .desktop {
        display: block;
    }

    .mobile {
        display: none;
    }

    /* Tablet style rules for header */
    header {
        /* remove sticky header */
        position: static;
    }

    header h1 {
        margin: 0.5em 0 0.5em 0;
    }

    #profile {
        float: left;
        max-width: 125px;
        margin-left: 1.0em;
    }
    #profile img {
        border-color: white;
    }

    /* Tablet style rules for nav area */
    nav ul {
        text-align: center;
        margin-bottom: 1%;
    }
    nav ul li {
        display: inline-block;
        border-bottom: none;
        border-left: 1px solid white;
        border-right: 1px solid white;
    }
    nav ul li:first-child {
        border-top: none;
    }

    /* Tablet style rules for main area */
    main {
        clear: left;
        padding-left: 5%;
        padding-right: 5%;
    }

    /* Temporary; must include gradient in assignment submission. */
    @media screen and (prefers-color-scheme: light) {
        main {
            background: linear-gradient(to bottom, #fff, #68B);
        }
    }
    @media screen and (prefers-color-scheme: dark) {
        main {
            background: linear-gradient(to bottom, #223, #000);
        }
    }

    /* Tablet style rules for footer */
    .email-link {
        font-size: 1.0em;
        display: inline-block;
    }
}

/* Media query for ONLY tablets */
@media screen and (min-width: 500px) and (max-width: 999px) {
    /* Display nav below profile image */
    nav {
        clear: left;
        margin-top: 3em;
    }
}

/* Media query for large tablets */
@media screen and (min-width: 750px) {
    /* Remove line break in subtitle and nav area */
    .small-tablets {
        display: none;
    }
}

/* Media query for laptops and desktops */
@media screen and (min-width: 1000px) {
    /* Desktop style rules for header */
    header h1 {
        font-size: 4em;
    }
    header h2 {
        margin-top: 1.5em;
        font-size: 1.75em;
    }
    #profile {
        max-width: 100%;
        margin-bottom: 1em;
    }

    /* Desktop style rules for nav area */
    nav {
        float: none;
        margin-right: 1em;
        margin-top: 3.5em;
    }
    nav ul {
        text-align: right;
    }

    /* Desktop style rules for main area */
    main li a {
        display: inline-block;
    }

    .end-of-columns {
        clear: both;
    }

    #bio {
        float: left;
        max-width: 48%;
    }

    #highlight {
        float: right;
        max-width: 48%;
    }
    
    #highlight img {
        max-width: 100%;
    }
}

